RESOLVED FIXED16050
sqlite3_prepare16_v2 build bustage.
https://bugs.webkit.org/show_bug.cgi?id=16050
Summary sqlite3_prepare16_v2 build bustage.
doug turner
Reported 2007-11-19 09:02:40 PST
in WebCore/platform/sql/SQLiteStatement.cpp, use of the function |sqlite3_prepare16_v2| is dependent on the SQLITE_VERSION_NUMBER being greater than 3.3.0. (line 53). |sqlite3_prepare16_v2| was introduced in SQLITE_VERSION_NUMBER 3.3.9 (according to http://www.sqlite.org/cvstrac/wiki?p=WhenPreparedStatementExpire). Anyone using sqlite version between 3.3.1 and 3.3.9 will not be able to build WebCore/platform/sql/SQLiteStatement.cpp. According to the SQLite headers ** The SQLITE_VERSION_NUMBER is an integer with the value ** (X*1000000 + Y*1000 + Z). For example, for version "3.1.1beta", ** SQLITE_VERSION_NUMBER is set to 3001001. To detect if they are using ** version 3.1.1 or greater at compile time, programs may use the test ** (SQLITE_VERSION_NUMBER>=3001001). Patch coming up.
Attachments
Patch 1. (1.20 KB, patch)
2007-11-19 09:17 PST, doug turner
timothy: review+
doug turner
Comment 1 2007-11-19 09:17:33 PST
Created attachment 17399 [details] Patch 1.
Alp Toker
Comment 2 2007-11-19 10:02:44 PST
Landed in r27910.
Note You need to log in before you can comment on or make changes to this bug.