2007-11-19  Doug Turner  <dougt@meer.net>

Reviewed by Timothy Hatcher.

        http://bugs.webkit.org/show_bug.cgi?id=16050
        sqlite3_prepare16_v2 build bustage.

        Using the correct SQLITE_VERSION_NUMBER around sqlite_prepare16_v2
        to fix build bustage.

        * platform/sql/SQLiteStatement.cpp:
        (WebCore::SQLiteStatement::prepare):



Canonical link: https://commits.webkit.org/21829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27910 268f45cc-cd09-0410-ab3c-d52691b4dbfc